--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>{{ page.title }}</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+			crossorigin="anonymous" />
 
-<header>
-  <h1>DKorablin Releases</h1>
-</header>
+		<title>{{ page.title }}</title>
+	</head>
+	<body>
+		<header>
+			<h1>DKorablin Releases</h1>
+		</header>
 
-<aside>
-  {% include toc.html %}
-</aside>
+		<aside>
+			{% include toc.html %}
+		</aside>
 
-<main>
-  {{ content }}
-</main>
-
-</body>
+		<main>
+			{{ content }}
+		</main>
+	</body>
 </html>
