--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -4,20 +4,6 @@
 {% for repo in sorted_repos %}
   {% assign repo_name = repo[0] %}
   {% assign releases = repo[1] %}
-  <li>
-    <strong>{{ repo_name }}</strong>
-    <ul>
-      {% for release in releases %}
-        <li>
-          {{ release.tag }} ({{ release.date }})
-          <ul>
-            {% for file in release.files %}
-              <li><a href="{{ file.url }}">{{ file.name }}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
-      {% endfor %}
-    </ul>
-  </li>
+  <li><a href="/{{repo_name}}">{{ repo_name }}</a></li>
 {% endfor %}
 </ul>
