Fixed font size

--- a/css/a.css
+++ b/css/a.css
@@ -13,7 +13,6 @@ aside {
 aside a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 25px;
   color: #818181;
   display: block;
 }
@@ -23,8 +22,7 @@ aside a:hover {
 }
 
 main {
-  margin-left: 160px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
+  margin-left: 160px; /* Same as the width of the aside */
   padding: 0px 10px;
 }
 
