Added back button in the TOC file

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,5 +1,6 @@
 <h3>Repositories</h3>
 <ul>
+<li><a href="/">&larr;</a></li>
 {% assign sorted_repos = site.data | sort %}
 {% for repo in sorted_repos %}
   {% assign repo_name = repo[0] %}
