--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,6 +1,6 @@
 <h3>Repositories</h3>
+<h4><a href="/">&larr;</a></h4>
 <ul>
-<li><a href="/">&larr;</a></li>
 {% assign sorted_repos = site.data | sort %}
 {% for repo in sorted_repos %}
   {% assign repo_name = repo[0] %}
