--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,5 +20,10 @@
 		<main>
 			{{ content }}
 		</main>
+
+		<footer>
+			<a href="https://github.com/DKorablin">My GitHub</a>
+			<p>Built on {{ site.time | date: "%d-%m-%Y %H:%M:%S" }}</p>
+		</footer>
 	</body>
 </html>
