Jekyll playing with footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
 			<footer>
 				<a href="https://github.com/DKorablin">My GitHub</a>
-				<p>Built on {{ site.time | date: "%d-%m-%Y %H:%M:%S" }}</p>
+				<div>Built on {{ site.time | date: "%d.%m.%Y %H:%M:%S" }}</div>
 			</footer>
 		</main>
 	</body>
