--- a/css/a.scss
+++ b/css/a.scss
@@ -3,17 +3,17 @@
 ---
 
 $aside-width: 220px;
+$border-style: 1px solid #f2f3f3
 
 aside {
   height: 100%;
   width: $aside-width;
   position: fixed;
-  z-index: 1;
   top: 0;
   left: 0;
   overflow-x: hidden;
   padding-top: 20px;
-  border-right: 1px solid #f2f3f3;
+  border-right: $border-style;
 
   a {
     padding: 6px 8px 6px 16px;
@@ -28,9 +28,19 @@ aside {
 }
 
 main {
-  // Use the variable to match the aside width
   margin-left: $aside-width;
   padding: 0px 10px;
+}
+
+footer {
+	position:fixed;
+	left:0;
+	bottom:0;
+	width:100%;
+	padding:10px;
+	border-top: $border-style;
+
+	div {font-size:10px;}
 }
 
 @media screen and (max-height: 450px) {
