scss: Fixed padding fo footer element

--- a/css/a.scss
+++ b/css/a.scss
@@ -15,7 +15,7 @@ aside {
   padding-top: 20px;
   border-right: $border-style;
 
-  a {
+  > a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     color: #818181;
